fixed asymetric gap

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -10,7 +10,6 @@ section {
         color: $white;
     }
     p {
-        margin-top: 10px;
         color: $clear-black;
         line-height: 45px;
         font-stretch: 50px;
