--- a/src/app/components/projects-section/projects-section.component.scss
+++ b/src/app/components/projects-section/projects-section.component.scss
@@ -1,7 +1,6 @@
 section {
     display: flex;
     flex-direction: column;
-    gap: 10px;
     main {
         ul {
             display: grid;
