--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,7 +41,7 @@ body, textarea, input{
 }
 .section-title {
     font-size: clamp(3.5rem, 5vw, 10rem);
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 h3{
     font-size: clamp(2rem, 3vw, 3rem);
